# qt_conan_boilerplate_template

./: .buildinfo  .clang-format  .clang-tidy  .cmake-format.py  .cspell.json  .editorconfig  .envrc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitpod.Dockerfile  .gitpod.yml  .kateproject  .lgtm.yml  .mega-linter.yml  .pre-commit-config.yaml  .prettierignore  AUTHORS  CHANGELOG.html  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPPLINT.cfg  LICENCE.adoc  LICENSE  Pipfile  README.md  README_building.md  README_troubleshooting.md  Taskfile.yml  appveyor.yml  bazel-bin  bazel-out  bazel-qt_conan_boilerplate_template  bazel-testlogs  build.py  build.sh  compile_commands.json  (+20 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  automerge.yml  config.yml  dependabot.yml  labeler.yml  labels.yml
.github/actions/setup_cache/: action.yml
.github/linters/: .commit-lint.yml
.github/template/: README.md  template_name  template_repository
.github/workflows/: api-doc.yml  auto-approve.yml  auto-format.yml  auto-merge.yml  ci-test.yml  ci.yml  codacy-analysis.yml  codacy.yml  codeql-analysis.yml  codespell-analysis.yml  commitlint.yml  dangerjs.yml  dependabot-merge.yml  devskim-analysis.yml  devskim.yml  docker-publish.yml  docs.yml  editor-config-checker.yml  flatpak-build.yml  generate-changelog.yml  licensecheck.yml  lint.yml  linux-build.yml  macos-build.yml  mega-linter.yml  misspell-fixer.yml  ossar.yml  pages.yml  release-drafter.yml  requierements.txt  requirements.txt  reuse-check.yml  sonarcloud-analysis.yml  sonarcloud.yml  stale.yml  template-janitor.yml  windows-build.yml  write-good.yml
_sources/: usage.rst.txt
_static/: documentation_options.js
assets/icons/: 32officeicons-31_89708.icns
cmake/: Cache.cmake  CheckTemplate.cmake  ClangTidy.cmake  Common.cmake  CompileOptions.cmake  CompilerWarnings.cmake  ComponentInstall.cmake  Conan.cmake  Coverage.cmake  Cppcheck.cmake  Cuda.cmake  Custom.cmake  DetectCompiler.cmake  Doxygen.cmake  FindASSIMP.cmake  FindEGL.cmake  FindFFMPEG.cmake  FindGLESv2.cmake  FindGLEW.cmake  FindHIDAPI.cmake  Findclang_tidy.cmake  Findgcov.cmake  Findgoogletest.cmake  Findlcov.cmake  Findnodejs.cmake  Gcov.cmake  GenerateTemplateExportHeader.cmake  GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in  HealthCheck.cmake  Linker.cmake  MinGW.cmake  Optimization.cmake  PackageProject.cmake  Packaging.cmake  PreventInSourceBuilds.cmake  RuntimeDependencies.cmake  StandardSettings.cmake  Standards.cmake  StaticAnalyzers.cmake  (+19 more)
cmake/config/: app.1.in  app.desktop.in  app.rc.in  appdata.xml.in  flatpak.yml.in  package_dmg.json.in
cmake/modules/: FindASSIMP.cmake  FindEGL.cmake  FindFFMPEG.cmake  FindGLESv2.cmake  FindGLEW.cmake  FindHIDAPI.cmake  FindSphinx.cmake  Findclang_tidy.cmake  Findcppcheck.cmake  Findgcov.cmake  Findgoogletest.cmake  Findlcov.cmake  Findnodejs.cmake  MacOSXBundleInfo.plist.in  app.1.in  app.desktop.in  app.rc.in  appdata.xml.in  flatpak.yml.in  package_dmg.json.in  snapcraft.yaml.in
configured_files/: CMakeLists.txt
de/: README.md
deploy/: AppImageBuilder.yml  CMakeLists.txt  README.md  flatpak.json  flatpak.yaml  flatpak.yml  rpm.spec
deploy/ifw/: config.xml
deploy/ubuntu-ppa/: recipe.txt
deploy/ubuntu-ppa/debian/: changelog  copyright  rules
docs/:  conf.py   CHANGELOG.md  CMakeLists.txt  conf.py  config.py  config.toml  index.md  index.rst  requirements.txt
docs/api-docs/: CMakeLists.txt  doxyfile.in
docs/content/posts/: my-first-post.md
docs/manual/: CMakeLists.txt  cmake-init.tex
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
packaging/flatpack/: org.jmuelbert.QT_Conan_BoilerPlate.yml  org.jmuelbert.qt_conan_boilerplate.yml
scripts/: build.sh  clang_format_check.sh
snap/: snapcraft.yaml
snap/scripts/: add-qt-shortcuts
src/: BUILD  CMakeLists.txt  factorial.cpp  version.h.in
src/app/: CMakeLists.txt  Window1.cpp  Window1.h  Window1.ui  main.cpp  mainwindow.h
src/app/include/qtwidgettest/: main.h  mainwindow.h
src/app/res/: MyApp.qrc
src/app/source/: main.cpp  mainwindow.cpp
src/app/test/: CMakeLists.txt  catch_main.cpp
src/apps/: CMakeLists.txt  qtwidgettest-config.cmake  snapcraft.yaml  version.h.in
src/apps/codegeneration/: template_api.h.in  version.h.in
src/apps/include/qtwidgettest/: main.h  mainwindow.h  qtwidgettest-version.h
src/apps/source/: main.cpp  mainwindow.ui
src/apps/test/: CMakeLists.txt  catch_main.cpp
src/codegeneration/: template_api.h.in  template_msvc_api.h.in
src/docs/: CHANGELOG.md  Doxyfile.in  conf.py  glossary.rst
src/lib/: CMakeLists.txt  MyClass.cpp  MyClass.h
src/lib/codegeneration/: template_api.h  template_msvc_api.h.in
src/lib/include/: MyClass.h  qtwidgettestlib_export.h
src/lib/include/myclass/: MyClass.h
src/lib/include/qtwidgettestlib/: qtwidgettestlib_export.h  qtwidgettestlib_features.h
src/lib/source/: MyClass.cpp
src/lib/test/: CMakeLists.txt  MyLibTest.cpp  testmain.cpp  testmain.h
src/test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
test/: CMakeLists.txt  CMakeUserPresets.json  catch_main.cpp  ci-test.yml  ci.yml  constexpr_tests.cpp  metrics.yml  testmain.cpp  tests.cpp
website/: index.md  package-lock.json
